K8S/jenkins/base/deploy.yml
apiVersion: "apps/v1"
kind: "StatefulSet"
metadata:
  name: "jenkins"
spec:
  serviceName: "jenkins"
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "jenkins"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "jenkins"
      annotations:
        promtail.io/collect: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/prometheus/"
    spec:
      serviceAccountName: "jenkins"
      automountServiceAccountToken: true
      volumes:
        - name: "tmp"
          emptyDir: {}
      containers:
        - name: "jenkins"
          image: "jenkins/jenkins:lts"
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - name: "tmp"
              mountPath: "/tmp"
            - name: "data"
              mountPath: "/var/jenkins_home"
          ports:
            - name: "http"
              containerPort: 8080
            - name: "jnlp"
              containerPort: 50000
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
          securityContext:
            fsGroup: 1000
            runAsUser: 1000
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          livenessProbe:
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
            httpGet:
              path: "/login"
              port: "http"
          readinessProbe:
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            httpGet:
              path: "/login"
              port: "http"

  volumeClaimTemplates:
    - metadata:
        name: "data"
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "local-path"
        resources:
          requests:
            storage: "8Gi"
