K8S/jenkins/base/service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "jenkins"
  name: "jenkins-http"
spec:
  selector:
    app.kubernetes.io/name: "jenkins"
  ports:
    - name: "http"
      port: 8080
      protocol: "TCP"
      targetPort: "http"

---
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "jenkins"
  name: "jenkins-jnlp"
spec:
  selector:
    app.kubernetes.io/name: "jenkins"
  ports:
    - name: "jnlp"
      port: 50000
      protocol: "TCP"
      targetPort: "jnlp"
