K8S/jenkins/base/ingress.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  namespace: "jenkins"
  name: "jenkins-master"
  annotations:
    cert-manager.io/issuer: "jenkins-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: "jenkins-ingress-cert"
      hosts: ["jenkins.k3s"]
  rules:
    - host: "jenkins.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "jenkins"
                port:
                  number: 8080
